--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@shopify/react-native-skia": "2.2.12",
+    "d3-scale": "^4.0.2",
     "d3-shape": "^3.2.0",
     "expo": "~54.0.13",
     "expo-constants": "~18.0.9",
